# web3-agent

./: .gitignore  .pylintrc  Dockerfile  Dockerfile-vs-updater  Dockerfile-vs-upddater  Dockerfile_vs_updater_poetry  README.md  alembic_dev.ini  auto-migration.sh  deploy.sh  main.py  pyproject.toml  requirements.txt  run.sh  vs_main.py
.alembic/: env.py
.alembic/versions/: 30bd13fc646d_auto_generated_migration_for_dev.py  37019870570e_auto_generated_migration_for_dev.py  74572ec8e8eb_auto_generated_migration_for_dev.py  7a2958fc579c_auto_generated_migration_for_dev.py  996211b6e517_auto_generated_migration_for_dev.py  b485c16febf3_auto_generated_migration_for_dev.py
.docker/: dev-docker-compose.yml  prerequisites-docker-compose.yaml  prod-docker-compose.yml  stage-compose.yml  stage-docker-compose.yml  vs-docker-compose.yml
.scripts/: api.conf  initial_db_setup.py  migration.py
app/: __init__.py  exceptions.py
app/api/: __init__.py
app/api/auth/: constants.py  crud.py  dependencies.py  utils.py  views.py
app/api/chats/: crud.py  schemas.py  views.py
app/api/chats/dependencies/: __init__.py  core.py  strategies.py
app/api/strategy_executions/: crud.py  schemas.py  views.py
app/api/transactions/: crud.py  dependencies.py  schemas.py  views.py
app/core/: config.py  errors.py  modules_factory.py
app/core/models/: __init__.py  base.py  chat.py  db_helper.py  prompt_bit.py  strategy_execution.py  transaction.py  user.py
app/crypto/: __init__.py
app/crypto/classes/: __init__.py  token.py
app/crypto/constants/: links.py
app/crypto/eth/: __init__.py  actions.py  network.py
app/crypto/eth/classes/: investment_strategy.py
app/crypto/eth/configs/: __init__.py  swap_config.py
app/crypto/eth/constants/: __init__.py  addresses.py
app/crypto/eth/investments/: __init__.py
app/crypto/eth_abstract/: __init__.py
app/crypto/eth_abstract/actions/: __init__.py
app/crypto/eth_abstract/enums/: contract_type.py  evm_chain.py
app/crypto/eth_abstract/services/: abi_keeper.py
app/crypto/eth_holesky/: network.py
app/crypto/services/: tokens_keeper.py
app/discord/: __init__.py
app/discord/classes/: discord_settings.py  rearden_discord_client.py
app/llm/: __init__.py  llama_3_constants.py  utils.py
app/llm/classes/: llm_response.py
app/llm/modules/: llm.py
app/logging_config/: __init__.py
app/telegram/: __init__.py  config.py
consts/: abis.py  contracts.py  tokens.py
playground/: apy_calculation.ipynb  few_shot_pormpt.ipynb  lg_base.ipynb  process_transaction_wormhole.ipynb  process_transaction_wormhole.py  search_with_tags.ipynb  sw_doc_rag.ipynb  test_auth.ipynb  test_enhance_with_faq.ipynb
qdrant_storage/: raft_state.json
tests/: chats.py  config.py
utils/: extra.py  knowledge_driver.py  paginated_response.py  telegram_bot.py
vectorstore_updater_app/: __init__.py  config.py  modules_factory.py  vectorstore.py  vs_update.py
vectorstore_updater_app/knowledge/: neon_discord.txt
(+66 files in other folders)
