[tool.poetry]
name = "pyproject-toml"
version = "0.0.1"
description = "rearden poetry"
authors = ["northern05"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "3.10.12"
aiohttp = "^3.9.5"
aiomysql = "^0.2.0"
aioredis = "^2.0.1"
aiosignal = "^1.3.1"
alembic = "^1.13.2"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
attrs = "^23.2.0"
base58 = "^2.1.1"
bitarray = "^2.9.2"
cachetools = "^5.4.0"
certifi = "^2024.7.4"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
ckzg = "^1.0.2"
click = "^8.1.7"
cryptography = "^43.0.0"
cytoolz = "^0.12.3"
eth-account = "^0.11.2"
eth-hash = "^0.7.0"
eth-keyfile = "^0.8.1"
eth-keys = "^0.5.1"
eth-rlp = "^1.0.1"
eth-typing = "^4.4.0"
eth-utils = "^4.1.1"
eth-abi = "^5.1.0"
fastapi = "^0.111.1"
fastapi-limiter = "^0.1.6"
fastapi-sa-orm-filter = "^0.2.0"
frozenlist = "^1.4.1"
google-ai-generativelanguage = "0.6.2"
google-api-core = "^2.19.1"
google-api-python-client = "^2.138.0"
google-auth = "^2.32.0"
google-auth-httplib2 = "^0.2.0"
google-generativeai = "0.5.1"
googleapis-common-protos = "^1.63.2"
greenlet = "^3.0.3"
grpcio = "^1.62.1"
grpcio-status = "^1.62.1"
h11 = "^0.14.0"
hexbytes = "^0.3.1"
httpcore = "^1.0.5"
httplib2 = "^0.22.0"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
iniconfig = "^2.0.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2023.12.1"
lru-dict = "^1.2.0"
mako = "^1.3.5"
markupsafe = "^2.1.5"
multidict = "^6.0.5"
ollama = "^0.3.0"
packaging = "^24.1"
parsimonious = "^0.10.0"
pluggy = "^1.5.0"
proto-plus = "^1.24.0"
protobuf = "^4.25.3"
pyasn1 = "^0.6.0"
pyasn1-modules = "^0.4.0"
pycparser = "^2.22"
pycryptodome = "^3.20.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pydantic-core = "^2.20.1"
pyjwt = "^2.8.0"
pymysql = "^1.1.1"
pynacl = "^1.5.0"
pyparsing = "^3.1.2"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
pyunormalize = "^15.1.0"
pyyaml = "^6.0.1"
redis = "^5.0.7"
referencing = "^0.35.1"
regex = "^2024.7.24"
requests = "^2.32.3"
rlp = "^4.0.1"
rpds-py = "^0.19.1"
rsa = "^4.9"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.31"
starlette = "0.37.2"
toolz = "^0.12.1"
tqdm = "^4.66.4"
typing-extensions = "^4.12.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.2"
uvicorn = "^0.30.3"
uvloop = "^0.19.0"
watchfiles = "^0.22.0"
web3 = "6.17.2"
websockets = "^12.0"
yarl = "^1.9.4"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.3"
fastembed = "0.2.7"
chromadb = "^0.5.5"
html2text = "^2024.2.26"
langgraph = "^0.1.15"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
jinja2 = "^3.1.4"
webdriver-manager = "^4.0.2"
selenium = "^4.23.1"
fake-useragent = "^1.5.1"
jsonpickle = "^3.2.2"
siwe = "4.1.0"
psutil = "^6.0.0"
discord-py = "^2.4.0"
unstructured = "0.14.10"
python-telegram-bot = "^21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
